--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,41 @@
 body {
-    padding: 10px;
+    margin: 0 auto;
+    padding: 4vmin;
+    overflow-x: hidden;
 }
+.main {
+    display: flex;
+    max-width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 2rem;
+    padding: 3vmin;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.154);
+}
+.main .product {
+    padding: 5vmin;
+    margin: 1.5vmin 0;
+    width: 55vmin;
+    border-radius: 7px;
+    flex-grow: 1;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.325);
+    max-width: 90vmin;
+}
+.main .product .title {
+    font-size: 4vmin;
+    width: 100%;
+    flex-grow: 0;
+}
+
+.main .product .image-container{
+    width: 100%;
+    max-height: 100%;
+}
+.main .product .image-container img{
+    width: 100%;
+    height: 60vmin;
+    border-radius: 3px;
+    object-fit: cover;
+}
+
+/*PRODUCT*/
