--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -19,6 +19,7 @@
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+                <a class="nav-link" href="{% url 'create_product' %}">Create Auction</a>
             </li>
             {% if user.is_authenticated %}
                 <li class="nav-item">
