--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,20 +2,31 @@
 {% load humanize %}
 
 {% block body %}
-    <h3>Active Listings</h3>
+    <h2>Active Listings</h2>
+    
     <div class="main">
     {% for product in products %}
         {% if product.auction.auction_status == 'AC' %}
         <div class="product">
             <div class='image-container'>
-                <a href="{% url 'product' product.id %}"><img class='image' src="{{ product.image.url }}" alt="{{ product.name }}"/></a>
-                <aside>{{ product.description }}</aside>
-                <a href="{% url 'product' product.id %}"><h2 class="title">{{ product.name }}</h2><a>
+                <a href="{% url 'product' product.id %}">
+                    <img class='image' src="{{ product.image.url }}" alt="{{ product.name }}"/>
+                </a>
             </div>
-            <h3>${{product.auction.current_price|floatformat:2|intcomma}}</h3>
+            
+            <div class="product-content">
+                <aside>{{ product.description }}</aside>
+                
+                <a href="{% url 'product' product.id %}">
+                    <h3 class="title">{{ product.name }}</h3>
+                </a>
+                
+                <h3 class="price">${{ product.auction.current_price|floatformat:2|intcomma }}</h3>
+            </div>
         </div>
         {% endif %}
+    {% empty %}
+        <p>No active listings at the moment. Check back soon!</p>
     {% endfor %}
     </div>
-    
 {% endblock %}
