--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -3,62 +3,77 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Auctions{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     </head>
     <body>
-        <h1>Auctions</h1>
-        <div>
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
-        </div>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-                <a class="nav-link" href="{% url 'create_product' %}">Create Auction</a>
-                <a class="nav-link" href="{% url 'display_watchlist' %}">My Watchlist</a>
-                <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+        <!-- Header with sticky navigation -->
+        <header>
+            <div class="header-content">
+                <div class="brand">
+                    <h1>Braco's Auctions</h1>
+                    <div class="user-status">
+                        {% if user.is_authenticated %}
+                            Signed in as <strong>{{ user.username }}</strong>
+                        {% else %}
+                            Not signed in
+                        {% endif %}
+                    </div>
+                </div>
+                
+                <nav>
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+                            <a class="nav-link" href="{% url 'create_product' %}">Create Auction</a>
+                            <a class="nav-link" href="{% url 'display_watchlist' %}">My Watchlist</a>
+                            <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+                        </li>
+                        
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                                <a class="nav-link" href="{% url 'register' %}">Register</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-            </li>
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Register</a>
-                </li>
-            {% endif %}
-        </ul>
-        <hr>
+        <!-- Messages/Notifications -->
         {% if messages %}
         <div class='messages'>
             {% for message in messages %}
-                <div class='message {{ messsage.tags }}'>
+                <div class='message {{ message.tags }}'>
                     {{ message }}
                 </div>
             {% endfor %}
         </div>
         {% endif %}
 
-        {% block body %}
+        <!-- Main Content -->
+        <main>
+            {% block body %}
+            {% endblock %}
+        </main>
 
-        {% endblock %}
+        <!-- Auto-dismiss messages script -->
         <script>
-        setTimeout(() => {
-            document.querySelectorAll('.message').forEach(msg => {
-            msg.style.transition = 'opacity 0.5s';
-            msg.style.opacity = '0';
-            setTimeout(() => msg.remove(), 500);
-            });
-        }, 3000);
+            setTimeout(() => {
+                document.querySelectorAll('.message').forEach(msg => {
+                    msg.style.transition = 'opacity 0.5s, transform 0.5s';
+                    msg.style.opacity = '0';
+                    msg.style.transform = 'translateX(100%)';
+                    setTimeout(() => msg.remove(), 500);
+                });
+            }, 3000);
         </script>
     </body>
 </html>
